fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/Price_Quote__c.object-meta.xml
<CustomObject>
    <description>Used for Pricing portal instead of standard quotes object</description>
    <label>Price Quote</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Price Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>