fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <description>Used for PRF Process</description>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Only Agreement</fullName>
            </value>
            <value>
                <fullName>Rebate Only Agreement</fullName>
            </value>
            <value>
                <fullName>Direct/Rebate Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>