fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Approval_Flag_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Approval_Flag_Rollup__c</fullName>
    <label>Approval Flag Rollup</label>
    <summarizedField>Price_Quote_Line_Item__c.Approval_Flag__c</summarizedField>
    <summaryForeignKey>Price_Quote_Line_Item__c.Price_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>