fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <label>Approval Level</label>
    <summarizedField>Price_Quote_Line_Item__c.Approval_Level__c</summarizedField>
    <summaryForeignKey>Price_Quote_Line_Item__c.Price_Quote__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>