fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Approval_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Name__c</fullName>
    <formula>if(Approval_Level__c = 1,&quot;REP Level&quot;,
if(Approval_Level__c = 2,&quot;RSM Level&quot;,
if(Approval_Level__c = 3,&quot;Director Level&quot;,
if(Approval_Level__c = 4,&quot;VP Level&quot;,
&quot;&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Level Name</label>
    <type>Text</type>
</CustomField>