fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <label>Business Unit 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>