fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Commit_Date__c</fullName>
    <label>Commit Date</label>
    <type>DateTime</type>
</CustomField>