fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Completed_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Completed_Approval_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used for marking records that go all the way through the approval process.</inlineHelpText>
    <label>Completed Approval Process</label>
    <type>Checkbox</type>
</CustomField>