fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Contact_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_Text__c</fullName>
    <formula>Contact_Name__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>