fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Courtesy_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_Pricing__c</fullName>
    <formula>OR(
/* EMS Support */
AND(
/* Either Customer Group 13 or Prospect Customers */
OR(
Account_Name__r.Customer_Group__c = &quot;13&quot;, 
Account_Name__r.Account_Record_Type_Name__c = &quot;Prospect Customer&quot;
),
OR(
$UserRole.Name = &quot;Teleflex Global IT&quot;,
$UserRole.Name = &quot;Commercial Operations&quot;,
left($UserRole.Name,3) = &quot;EMS&quot;
)
),
/* END EMS */
/* Vascular EMS Support */
AND(
/* ZH Price List Customers */
Account_Name__r.Price_List_Type__c  = &quot;ZH&quot;, 
OR(
$UserRole.Name = &apos;Teleflex Global IT&apos;,
$UserRole.Name = &apos;Commercial Operations&apos;,
left($UserRole.Name,4) = &apos;Vasc&apos;
)
)
/* END Vascular EMS Support */
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Courtesy Pricing</label>
    <type>Checkbox</type>
</CustomField>