fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Courtesy_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_Pricing_Type__c</fullName>
    <formula>if(left($UserRole.Name,3) = &quot;EMS&quot;,&quot;EMS&quot;,
if(left($UserRole.Name,4) = &quot;Vasc&quot;,&quot;Vascular&quot;,
if(OR($UserRole.Name = &apos;Teleflex Global IT&apos;,$UserRole.Name = &apos;Commercial Operations&apos;),&quot;Operations&quot;,
NULL
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to determine which &apos;Courtesy&apos; contracts are pulled in to the &apos;Courtesy Pricing&apos; drop down on the Price Quote UI.</inlineHelpText>
    <label>Courtesy Pricing Type</label>
    <type>Text</type>
</CustomField>