fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Created_by_me__c.field-meta.xml
<CustomField>
    <fullName>Created_by_me__c</fullName>
    <formula>IF(CreatedById = $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by me</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>