fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Created_Day__c.field-meta.xml
<CustomField>
    <fullName>Created_Day__c</fullName>
    <formula>TEXT(MONTH(DATEVALUE(CreatedDate))) &amp; &quot;.&quot; &amp; TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &quot; - &quot;
&amp;
CASE( MOD(DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Day</label>
    <type>Text</type>
</CustomField>