fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Current_Annual_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Current_Annual_Purchases__c</fullName>
    <label>Current Annual Purchases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>