fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Customer_comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_comments__c</fullName>
    <label>Customer comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>