fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Data_Driven_Justification__c.field-meta.xml
<CustomField>
    <fullName>Data_Driven_Justification__c</fullName>
    <label>Data Driven Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>