fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date quote was created</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>