fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Delivered_Order_Lot_Serial_Req_Below__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Order_Lot_Serial_Req_Below__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used with the &apos;Sample Request&apos; template</description>
    <inlineHelpText>Used with the &apos;Sample Request&apos; template</inlineHelpText>
    <label>Delivered Order (Lot/Serial Req. Below)</label>
    <type>Checkbox</type>
</CustomField>