fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Discounted_Total__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Total__c</fullName>
    <description>Field is used to show amount of discount for Interventional Capital/Cardiac Service.</description>
    <formula>Grand_Total__c - (Grand_Total__c * Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field is used to show amount of discount for Interventional Capital/Cardiac Service.</inlineHelpText>
    <label>Discounted Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>