fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Eligible_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Distributor__c</fullName>
    <description>Part of the PRF Process</description>
    <label>Eligible Distributor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>