fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/EMEA_Approval_Flag_Rollup__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Approval_Flag_Rollup__c</fullName>
    <description>Rollup of EMEA Approval Flag from PQ Line Item.</description>
    <inlineHelpText>Rollup of EMEA Approval Flag from PQ Line Item.</inlineHelpText>
    <label>EMEA Approval Flag Rollup</label>
    <summarizedField>Price_Quote_Line_Item__c.EMEA_Approval_Flag__c</summarizedField>
    <summaryForeignKey>Price_Quote_Line_Item__c.Price_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>