fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/EMEA_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Approval_Level__c</fullName>
    <description>Rollup of maximum approval level needed for EMEA.</description>
    <inlineHelpText>Rollup of maximum approval level needed for EMEA.</inlineHelpText>
    <label>EMEA Approval Level</label>
    <summarizedField>Price_Quote_Line_Item__c.EMEA_Approval_Level__c</summarizedField>
    <summaryForeignKey>Price_Quote_Line_Item__c.Price_Quote__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>