fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <defaultValue>TODAY() + 90</defaultValue>
    <description>Expiration date of the quote</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>