fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/How_Created__c.field-meta.xml
<CustomField>
    <fullName>How_Created__c</fullName>
    <description>Capture how the Price Quote was created.</description>
    <label>How Created</label>
    <length>255</length>
    <type>Text</type>
</CustomField>