fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/InApproval__c.field-meta.xml
<CustomField>
    <fullName>InApproval__c</fullName>
    <description>If( OR(ISPICKVAL(Status__c, &apos;PRF In Process&apos;), ISPICKVAL(Status__c, &apos;Waiting for Contracts Approval&apos;), ISPICKVAL(Status__c, &apos;Waiting For RSM Approval&apos;) ), true, false  )</description>
    <formula>OR(
ISPICKVAL(Status__c, &apos;PRF In Process&apos;), 
ISPICKVAL(Status__c, &apos;Waiting for Contracts Approval&apos;), 
ISPICKVAL(Status__c, &apos;Waiting For RSM Approval&apos;),
ISPICKVAL(Status__c, &apos;Waiting on Approval&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InApproval</label>
    <type>Checkbox</type>
</CustomField>