fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Internal_Comments_Only__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments_Only__c</fullName>
    <label>Internal Comments Only</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>