fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/IsTickled__c.field-meta.xml
<CustomField>
    <fullName>IsTickled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this in workflow for Empty Sales Org and records created in Salesforce1</description>
    <label>IsTickled</label>
    <type>Checkbox</type>
</CustomField>