fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Language_Formula__c.field-meta.xml
<CustomField>
    <fullName>Language_Formula__c</fullName>
    <description>Show language of customer on Price Quote template.</description>
    <formula>IF(NOT( ISBLANK(Account_Name__r.Language__c) ), Account_Name__r.Language__c, &quot;English&quot;)</formula>
    <label>Language Formula</label>
    <type>Text</type>
</CustomField>