fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Letterhead__c.field-meta.xml
<CustomField>
    <fullName>Letterhead__c</fullName>
    <defaultValue>&quot;Teleflex&quot;</defaultValue>
    <inlineHelpText>Either Teleflex or Arrow</inlineHelpText>
    <label>Letterhead</label>
    <length>50</length>
    <type>Text</type>
</CustomField>