fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Count__c</fullName>
    <inlineHelpText>Number of Related Line Items</inlineHelpText>
    <label>Line Count</label>
    <summaryForeignKey>Price_Quote_Line_Item__c.Price_Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>