fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/List_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Type__c</fullName>
    <formula>Account_Name__r.List_Price_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Type</label>
    <type>Text</type>
</CustomField>