fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Material_Status_Check__c.field-meta.xml
<CustomField>
    <fullName>Material_Status_Check__c</fullName>
    <label>Material Status Check</label>
    <summarizedField>Price_Quote_Line_Item__c.Material_Status_Check__c</summarizedField>
    <summaryForeignKey>Price_Quote_Line_Item__c.Price_Quote__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>