fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/No_Opp__c.field-meta.xml
<CustomField>
    <fullName>No_Opp__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Do not create an Opportunity</label>
    <type>Checkbox</type>
</CustomField>