fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/One_Time_Purchase__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Time Purchase</label>
    <type>Checkbox</type>
</CustomField>