fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Price Quotes</relationshipLabel>
    <relationshipName>Price_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>