fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_ID__c</fullName>
    <formula>Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner ID</label>
    <type>Text</type>
</CustomField>