fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Owner_Phone__c</fullName>
    <formula>Owner:User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Phone</label>
    <type>Text</type>
</CustomField>