fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/OwnersManager__c.field-meta.xml
<CustomField>
    <fullName>OwnersManager__c</fullName>
    <formula>Owner:User.Manager.FirstName &amp; &quot;&quot;  &amp; Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Manager</label>
    <type>Text</type>
</CustomField>