fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Preferred_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_End_Date__c</fullName>
    <label>Preferred End Date</label>
    <type>Date</type>
</CustomField>