fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Preferred_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Start_Date__c</fullName>
    <label>Preferred Start Date</label>
    <type>Date</type>
</CustomField>