fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/PRF__c.field-meta.xml
<CustomField>
    <fullName>PRF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PRF</label>
    <referenceTo>PRF__c</referenceTo>
    <relationshipLabel>Price Quotes</relationshipLabel>
    <relationshipName>Price_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>