fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Price_Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Quote_Name__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp;  SUBSTITUTE(Account_Name__r.Name, &quot;,&quot;, &quot;&quot;)  &amp; &quot; - &quot; &amp; SUBSTITUTE(Contact_Name__r.Full_Name__c, &quot;,&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Quote Name</label>
    <type>Text</type>
</CustomField>