fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Price_Quote_Name_Alt__c.field-meta.xml
<CustomField>
    <fullName>Price_Quote_Name_Alt__c</fullName>
    <description>If( $User.ProfileId = &quot;00eE0000000j4Vk&quot;, Name &amp; &quot; - &quot; &amp; Account_Name__r.Name &amp; &quot; - &quot; &amp; Owner_Full_Name__c &amp; &quot; -- &quot; &amp; TEXT(Status__c),
			Name &amp; &quot; - &quot; &amp; Account_Name__r.Name &amp; &quot; -- &quot; &amp; TEXT(Status__c)
)</description>
    <formula>If( $User.ProfileId = &quot;00eE0000000j4Vk&quot;, Name &amp; &quot; - &quot; &amp; Account_Name__r.Name &amp; &quot; - &quot; &amp; Owner_Full_Name__c &amp; &quot; -- &quot; &amp; TEXT(Status__c),
			Name &amp; &quot; - &quot; &amp; Account_Name__r.Name &amp; &quot; -- &quot; &amp; TEXT(Status__c)
)</formula>
    <label>Price Quote Name Alt</label>
    <type>Text</type>
</CustomField>