fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Price_Quote_Name_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Price_Quote_Name_Sales_Person__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp; SUBSTITUTE(Account_Name__r.Name, &quot;,&quot;, &quot;&quot;) &amp; &quot; - &quot; &amp; Owner_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Quote Name Sales Person</label>
    <type>Text</type>
</CustomField>