fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID__c</fullName>
    <externalId>true</externalId>
    <label>Quote ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>