fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Quote_Template__c.field-meta.xml
<CustomField>
    <fullName>Quote_Template__c</fullName>
    <description>This is used to drive which quote template to use.</description>
    <formula>IF(ISPICKVAL(Stationary__c, &quot;EMS&quot;), &quot;PP_Print_Quote_EMS&quot;,
IF(ISPICKVAL(Stationary__c, &quot;Customer Service&quot;), &quot;PP_Print_Quote_CS&quot;,
IF(ISPICKVAL(Stationary__c, &quot;Cardiac&quot;), &quot;PP_Print_Quote_Cardiac&quot;,
IF(ISPICKVAL(Stationary__c, &quot;Australia&quot;), &quot;PP_Print_Quote_AU&quot;,
IF(ISPICKVAL(Stationary__c, &quot;New Zealand&quot;), &quot;PP_Print_Quote_NZ&quot;,
IF(ISPICKVAL(Stationary__c, &quot;EMEA&quot;), &quot;PP_Print_Quote_EMEA&quot;,
&quot;PP_Print_Quote&quot;
))))))</formula>
    <inlineHelpText>This is used to drive which quote template to use.</inlineHelpText>
    <label>Quote Template</label>
    <type>Text</type>
</CustomField>