fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/RsmRepToggle__c.field-meta.xml
<CustomField>
    <fullName>RsmRepToggle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rsm/Rep Toggle</label>
    <type>Checkbox</type>
</CustomField>