fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Sample_Order__c.field-meta.xml
<CustomField>
    <fullName>Sample_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used with the &apos;Sample Request&apos; template</description>
    <inlineHelpText>Used with the &apos;Sample Request&apos; template</inlineHelpText>
    <label>Sample Order</label>
    <type>Checkbox</type>
</CustomField>