fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Sample_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Type__c</fullName>
    <label>Sample Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Competitive Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>