fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Show_Images__c.field-meta.xml
<CustomField>
    <fullName>Show_Images__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Images</label>
    <type>Checkbox</type>
</CustomField>