fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Show_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Show_List_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show List Price</label>
    <type>Checkbox</type>
</CustomField>