fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <description>Sold To account for account being quoted.</description>
    <inlineHelpText>Sold To account for account being quoted.</inlineHelpText>
    <label>Sold To</label>
    <length>10</length>
    <type>Text</type>
</CustomField>