fullSandbox11072023/force-app/main/default/objects/Price_Quote__c/fields/Sold_To_Price_List_Type__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Price_List_Type__c</fullName>
    <description>Field holds price list type for sold to account associated with main account on price quote header.</description>
    <inlineHelpText>Field holds price list type for sold to account associated with main account on price quote header.</inlineHelpText>
    <label>Sold To Price List Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>